@@ -78,8 +78,7 @@ END //
 
 DELIMITER ;
 
-SET @sqlmode= "";
-SELECT IF(NOAUTOCREATENEEDED(), 'NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION', 'NO_ENGINE_SUBSTITUTION') INTO @sqlmode;
+SET @sqlmode= "NO_ENGINE_SUBSTITUTIION";
 SET SESSION sql_mode = @sqlmode;
 
 --
