@@ -130,7 +130,8 @@ function db_connect_real($device, $user, $pass, $db_name, $db_type = 'mysql', $p
 				'NO_ZERO_DATE',
 				'NO_ZERO_IN_DATE',
 				'ONLY_FULL_GROUP_BY',
-				'NO_AUTO_VALUE_ON_ZERO'
+				'NO_AUTO_VALUE_ON_ZERO',
+				'NO_AUTO_CREATE_USER'
 			);
 
 			$database_sessions["$odevice:$port:$db_name"] = $cnn_id;
