@@ -144,6 +144,7 @@ Cacti CHANGELOG
 -issue#5420: PHP8.1.x, PHP-SNMP and snmp->get() errors due to improper use of trim() function
 -issue#5426: Importing a legacy Data Query Template can result in the Template being unusable
 -issue#5427: Unable to hook the settings.php page with JavaScript action
+-issue#5434: Remove SQL Mode NO_AUTO_CREATE_USER as it's deprecated and removed from recent MySQL releases
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature#5418: Display device class before package import 
